--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -1,12 +1,17 @@
 .sidenav {
-    background-color: #515151;
-    width: 200px;
+  background-color: #515151;
+  width: 200px;
 }
 
 .sidenav a {
-    color: #FFF;
+  color: #FFF;
 }
 
 .sidenav i {
-    padding-right: 10px;
+  padding-right: 10px;
+}
+
+.content {
+  padding: 16px;
+  background-color: #FFFFFF;
 }
