--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,10 +1,11 @@
 <mat-toolbar class="footer">
     <span>
         Desenvolvido com
-        <i class="material-icons red v-middle">
+        <i class="material-icons v-middle" appRed>
             favorite
         </i>
-        por <strong>Lourivaldo</strong>
+        por <strong><span class="red">Louri</span>valdo</strong>
     </span>
+
 </mat-toolbar>
 
