--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -4,3 +4,7 @@
         Sistema para exemplificar a construção de um cadastro em Angular 9
     </mat-card-subtitle>
 </mat-card>
+
+<ul>
+    <li *myFor="let n em [1, 2, 3, 4]">{{n}}</li>
+</ul>
