--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,7 +1,17 @@
-<button mat-raised-button (click)="createProduct()" color="primary">
-    Salvar Produto
-</button>
+<mat-card>
 
-<button mat-raised-button (click)="cancel()">
-    Cancelar
-</button>
+    <mat-card-title>Novo Produto</mat-card-title>
+
+    <form>
+        <mat-form-field>
+            <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.price" name="price">
+        </mat-form-field>
+    </form>
+
+    <button mat-raised-button (click)="createProduct()" color="primary"> Salvar Produto</button>
+    <button mat-raised-button (click)="cancel()"> Cancelar</button>
+</mat-card>
