--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,3 +10,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .v-middle {
     vertical-align: middle;
 }
+
+.msg-success {
+    background-color: #35e359;
+}
+
+.msg-error {
+    background-color: #e35e6b;
+}
